[gd_scene load_steps=3 format=2]

[ext_resource path="res://graphics/images/interface/circle_white.svg" type="Texture" id=1]
[ext_resource path="res://source/interface/hud/components/buttons/CircleButton.gd" type="Script" id=2]

[node name="CircleButton" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1790.0
margin_bottom = -950.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterCircle" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InnerCircle" type="TextureRect" parent="MarginContainer"]
margin_right = 130.0
margin_bottom = 130.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}
